[gd_scene load_steps=2 format=3 uid="uid://dxdwq462gx2vy"]

[ext_resource type="Script" uid="uid://cwi60polhx3d3" path="res://menu/game_overlay.gd" id="1_pi1l3"]

[node name="GameOverlay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_pi1l3")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TopBar" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Date_Time" type="Label" parent="VBoxContainer/TopBar"]
layout_mode = 2

[node name="Slower" type="Button" parent="VBoxContainer/TopBar"]
layout_mode = 2
text = "slower"

[node name="Faster" type="Button" parent="VBoxContainer/TopBar"]
layout_mode = 2
text = "faster "

[node name="Speed_Label" type="Label" parent="VBoxContainer/TopBar"]
layout_mode = 2
text = " 1x"

[node name="ModeButton" type="OptionButton" parent="VBoxContainer/TopBar"]
unique_name_in_owner = true
layout_mode = 2
selected = 0
item_count = 2
popup/item_0/text = "Live Mode"
popup/item_0/id = 0
popup/item_1/text = "Build Mode"
popup/item_1/id = 1

[node name="BuildModeBar" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="BuildOptionsButton" type="OptionButton" parent="VBoxContainer/BuildModeBar"]
unique_name_in_owner = true
layout_mode = 2
selected = 0
item_count = 2
popup/item_0/text = "Edit Room"
popup/item_0/id = 1
popup/item_1/text = "New Room"
popup/item_1/id = 0

[node name="Selected" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -54.0
offset_right = 145.0
grow_vertical = 0

[node name="Panel" type="VBoxContainer" parent="Selected"]
layout_mode = 2

[node name="Display_Name" type="Label" parent="Selected/Panel"]
layout_mode = 2
text = "
"

[node name="Task" type="Label" parent="Selected/Panel"]
layout_mode = 2

[node name="Sleep_Need" type="HBoxContainer" parent="Selected/Panel"]
layout_mode = 2

[node name="Label" type="Label" parent="Selected/Panel/Sleep_Need"]
layout_mode = 2
text = "sleep"

[node name="ProgressBar" type="ProgressBar" parent="Selected/Panel/Sleep_Need"]
custom_minimum_size = Vector2(100, 10)
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/TopBar/Slower" to="." method="_on_slower_pressed"]
[connection signal="pressed" from="VBoxContainer/TopBar/Faster" to="." method="_on_faster_pressed"]
[connection signal="item_selected" from="VBoxContainer/TopBar/ModeButton" to="." method="_on_mode_button_item_selected"]
[connection signal="item_selected" from="VBoxContainer/BuildModeBar/BuildOptionsButton" to="." method="_on_build_options_button_item_selected"]
